deploy/announcementservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanvas-announcementservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanvas-announcementservice
  template:
    metadata:
      labels:
        app: kanvas-announcementservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: kanvas-announcementservice
        image: ahmedjimale/kanvas-announcementservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kanvas-announcementservice-srv
spec:
  type: ClusterIP
  selector:
    app: kanvas-announcementservice
  ports:
  - name: kanvas-announcementservice
    protocol: TCP
    port: 80
    targetPort: 80
  # - name: kanvas-userservice-grpc
  #   protocol: TCP
  #   port: 666
  #   targetPort: 666

    
# apiVersion: v1
# kind: Service
# metadata:
#   name: kanvas-userservice
# spec:
#   type: ClusterIP
#   ports:
#   - port: 80
#   selector:
#     app: kanvas-userservice
