deploy/mailservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanvas-mailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanvas-mailservice
  template:
    metadata:
      labels:
        app: kanvas-mailservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: kanvas-mailservice
        image: ahmedjimale/kanvas-mailservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kanvas-mailservice-srv
spec:
  type: ClusterIP
  selector:
    app: kanvas-mailservice
  ports:
  - name: kanvas-mailservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kanvas-np-mailservice-srv
spec:
  type: NodePort
  selector:
    app:  kanvas-mailservice
  ports:
    - name:  kanvas-mailervice
      protocol: TCP
      port: 80
      targetPort: 80


  # - name: kanvas-mailservice-grpc
  #   protocol: TCP
  #   port: 667
  #   targetPort: 667


# apiVersion: v1
# kind: Service
# metadata:
#   name: kanvas-mailservice-srv
# spec:
#   type: ClusterIP
#   ports:
#   - port: 80
#   selector:
#     app: kanvas-mailservice
