deploy/userservice-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanvas-np-userservice-srv
spec:
  type: NodePort
  selector:
    app:  kanvas-userservice
  ports:
    - name:  kanvas-userservice
      protocol: TCP
      port: 80
      targetPort: 80
