deploy/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kanvas.com
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: kanvas-userservice-srv
                port:
                  number: 80
          - path: /api/mail
            pathType: Prefix
            backend:
              service:
                name: kanvas-mailservice-srv
                port:
                  number: 80

# https://www.youtube.com/watch?v=u948CURLDJA
